# task17

./: CMakeLists.txt  README.md
client_cpp/: .main.cpp.swp  CMakeLists.txt  main.cpp
client_py/: CMakeLists.txt  stack.py
cmatrix/client_cpp/: CMakeLists.txt  main.cpp  matrix.cpp  matrix.h
cmatrix/client_py/: CMakeLists.txt  matrix.py
cmatrix/lib/: CMakeLists.txt  cmatrix.c  cmatrix.h  test_cmatrix.c
cstack/client_cpp/: CMakeLists.txt  stack.hpp
cstack/client_py/: CMakeLists.txt  stack.py
cstack/lib/: CMakeLists.txt  cstack.c  cstack.h  test_cstack.c
